.metadata/.plugins/org.eclipse.cdt.ui/LabAssignmentDice.build.log
17:39:17 **** Incremental Build of configuration Debug for project LabAssignmentDice ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"C:/Users/Sienna/Documents/Uni Work/CC2511-2017/NewWorkSpace/Sienna-Rose-Price-Labs/LabAssignmentDice/Static_Code/PDD" -I"C:/Users/Sienna/Documents/Uni Work/CC2511-2017/NewWorkSpace/Sienna-Rose-Price-Labs/LabAssignmentDice/Static_Code/IO_Map" -I"C:/Users/Sienna/Documents/Uni Work/CC2511-2017/NewWorkSpace/Sienna-Rose-Price-Labs/LabAssignmentDice/Sources" -I"C:/Users/Sienna/Documents/Uni Work/CC2511-2017/NewWorkSpace/Sienna-Rose-Price-Labs/LabAssignmentDice/Generated_Code" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:149:5: warning: implicit declaration of function 'Switch1_GetVal' [-Wimplicit-function-declaration]
     Switch1_GetVal();
     ^
../Sources/main.c: At top level:
../Sources/main.c:175:3: error: expected identifier or '(' before 'for'
   for(;;){}
   ^
../Sources/main.c:175:9: error: expected identifier or '(' before ')' token
   for(;;){}
         ^
../Sources/main.c:177:1: error: expected identifier or '(' before '}' token
 } /*** End of main routine. DO NOT MODIFY THIS TEXT!!! ***/
 ^
Sources/subdir.mk:21: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1

17:39:18 Build Finished (took 342ms)

